force-app/main/default/objects/Received_Order_Test__c/Received_Order_Test__c.object-meta.xml
<CustomObject>
    <label>Received Order Test</label>
    <nameField>
        <label>Received Order Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Received Order Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>