force-app/main/default/objects/Received_Order_Test__c/fields/Help__c.field-meta.xml
<CustomField>
    <fullName>Help__c</fullName>
    <label>Help</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>