force-app/main/default/objects/Received_Order_Test__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Received Order Test</relationshipLabel>
    <relationshipName>Received_Order_Test</relationshipName>
    <type>Lookup</type>
</CustomField>