force-app/main/default/objects/Received_Order_Test__c/fields/Regional_Rep1__c.field-meta.xml
<CustomField>
    <fullName>Regional_Rep1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Rep1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Received_Order_Test2</relationshipName>
    <type>Lookup</type>
</CustomField>