force-app/main/default/objects/Received_Order_Test__c/fields/Regional_Rep2__c.field-meta.xml
<CustomField>
    <fullName>Regional_Rep2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Received_Order_Test3</relationshipName>
    <type>Lookup</type>
</CustomField>