force-app/main/default/objects/Received_Order_Test__c/fields/Regional_Rep3__c.field-meta.xml
<CustomField>
    <fullName>Regional_Rep3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Rep 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Received_Order_Test4</relationshipName>
    <type>Lookup</type>
</CustomField>