force-app/main/default/objects/Received_Order_Test__c/fields/Regional_Rep_1_Split__c.field-meta.xml
<CustomField>
    <fullName>Regional_Rep_1_Split__c</fullName>
    <label>Regional Rep 1 Split</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>