force-app/main/default/objects/Received_Order_Test__c/fields/Regional_Rep_3_Split__c.field-meta.xml
<CustomField>
    <fullName>Regional_Rep_3_Split__c</fullName>
    <label>Regional Rep 3 Split</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>