force-app/main/default/objects/Received_Order_Test__c/fields/rep1__c.field-meta.xml
<CustomField>
    <fullName>rep1__c</fullName>
    <formula>CASESAFEID(Regional_Rep1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rep1</label>
    <type>Text</type>
</CustomField>