force-app/main/default/objects/Received_Order_Test__c/fields/Vertical_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical Rep 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Received_Order_Test</relationshipName>
    <type>Lookup</type>
</CustomField>