force-app/main/default/objects/Received_Order_Test__c/fields/Vertical_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Received_Order_Test1</relationshipName>
    <type>Lookup</type>
</CustomField>