force-app/main/default/objects/Received_Order_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Vertical_Rep_1__c</columns>
    <columns>Vertical_Rep_2__c</columns>
    <columns>Regional_Rep1__c</columns>
    <columns>Regional_Rep_1_Split__c</columns>
    <columns>Regional_Rep2__c</columns>
    <columns>Regional_Rep_2_Split__c</columns>
    <columns>Regional_Rep3__c</columns>
    <columns>Regional_Rep_3_Split__c</columns>
    <columns>Regional_Rep4__c</columns>
    <columns>Regional_Rep_4_Split__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>